<resources>
    <string name="app_name">Rich Vehicle Data</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World</string>
    <string name="start_note">Note: Start capturing will capture your sensor data to cloud</string>
    <string name="stop_note">Note: Closing app will pause capturing</string>

    <string name="start_capturing">Start Capturing</string>
    <string name="stop_capturing">Stop Capturing</string>

    <string name="capturing_text">Capturing…</string>
</resources>
